--- a/MonteCarloControlExp.ipynb
+++ b/MonteCarloControlExp.ipynb
@@ -1,25 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/obedotto/monte-carlo-control/blob/main/MonteCarloControlExp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -48,17 +33,22 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "pip install git+https://github.com/mimoralea/gym-walk#egg=gym-walk"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "cTWjcHm9eYrO"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "pip install git+https://github.com/mimoralea/gym-walk#egg=gym-walk"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Topbrx_BgxX4"
+      },
+      "outputs": [],
       "source": [
         "def print_policy(pi, P, action_symbols=('<', 'v', '>', '^'), n_cols=4, title='Policy:'):\n",
         "    print(title)\n",
@@ -71,15 +61,15 @@
         "        else:\n",
         "            print(str(s).zfill(2), arrs[a].rjust(6), end=\" \")\n",
         "        if (s + 1) % n_cols == 0: print(\"|\")"
-      ],
-      "metadata": {
-        "id": "Topbrx_BgxX4"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "x2pNtMsagzbG"
+      },
+      "outputs": [],
       "source": [
         "def print_state_value_function(V, P, n_cols=4, prec=3, title='State-value function:'):\n",
         "    print(title)\n",
@@ -91,50 +81,50 @@
         "        else:\n",
         "            print(str(s).zfill(2), '{}'.format(np.round(v, prec)).rjust(6), end=\" \")\n",
         "        if (s + 1) % n_cols == 0: print(\"|\")"
-      ],
-      "metadata": {
-        "id": "x2pNtMsagzbG"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "bsH4lJu_em1V"
+      },
+      "outputs": [],
       "source": [
         "env = gym.make('FrozenLake-v1')\n",
         "P = env.env.P\n",
         "init_state = env.reset()\n",
         "#goal_state = 6\n",
         "#LEFT, RIGHT = range(2)"
-      ],
-      "metadata": {
-        "id": "bsH4lJu_em1V"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "P"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "XvFZSrzuW3Wf"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "P"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Exponentially decaying schedule\n"
-      ],
       "metadata": {
         "id": "VMRhO7SEiccW"
-      }
+      },
+      "source": [
+        "Exponentially decaying schedule\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "P54uiWU4fPel"
+      },
+      "outputs": [],
       "source": [
         "def decay_schedule(\n",
         "    init_value, min_value, decay_ratio,\n",
@@ -143,24 +133,24 @@
         "  #Write your code here\n",
         "\n",
         "  return values"
-      ],
-      "metadata": {
-        "id": "P54uiWU4fPel"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Exploratory Policy Trajectories"
-      ],
       "metadata": {
         "id": "9vXx70YbinT9"
-      }
+      },
+      "source": [
+        "Exploratory Policy Trajectories"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "HpPgafD7iXSH"
+      },
+      "outputs": [],
       "source": [
         "from itertools import count\n",
         "def generate_trajectory(\n",
@@ -171,93 +161,141 @@
         "  #Write your code here\n",
         "\n",
         "  return np.array(trajectory, np.object)"
-      ],
-      "metadata": {
-        "id": "HpPgafD7iXSH"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Monte Carlo control"
-      ],
       "metadata": {
         "id": "5N1bFAXGuVIg"
-      }
+      },
+      "source": [
+        "Monte Carlo control"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "def mc_control (env, gamma = 1.0,\n",
-        "                init_alpha = 0.5,min_alpha = 0.01, alpha_decay_ratio = 0.5,\n",
-        "                init_epsilon = 1.0, min_epsilon = 0.1, epsilon_decay_ratio = 0.9,\n",
-        "                n_episodes = 3000, max_steps = 200, first_visit = True):\n",
-        "  nS, nA = env.observation_space.n, env.action_space.n\n",
-        "\n",
-        "  #Write your code here\n",
-        "\n",
-        "  #return Q, V, pi, Q_track, pi_track\n",
-        "  return Q, V, pi"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "wy0rgMBxuaOP"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "from tqdm import tqdm\n",
+        "\n",
+        "def mc_control(env, gamma=1.0, init_alpha=0.5, min_alpha=0.01, alpha_decay_ratio=0.5,\n",
+        "               init_epsilon=1.0, min_epsilon=0.1, epsilon_decay_ratio=0.9,\n",
+        "               n_episodes=3000, max_steps=200, first_visit=True):\n",
+        "\n",
+        "    # Get the number of states and actions\n",
+        "    nS, nA = env.observation_space.n, env.action_space.n\n",
+        "\n",
+        "    # Create an array for discounting\n",
+        "    disc = np.logspace(0, max_steps, num=max_steps, base=gamma, endpoint=False)\n",
+        "\n",
+        "    def decay_schedule(init_value, min_value, decay_ratio, n):\n",
+        "        return np.maximum(min_value, init_value * (decay_ratio ** np.arange(n))\n",
+        "\n",
+        "    # Create schedules for alpha and epsilon decay\n",
+        "    alphas = decay_schedule(init_alpha, min_alpha, alpha_decay_ratio, n_episodes)\n",
+        "    epsilons = decay_schedule(init_epsilon, min_epsilon, epsilon_decay_ratio, n_episodes)\n",
+        "\n",
+        "    # Initialize Q-table and tracking array\n",
+        "    Q = np.zeros((nS, nA), dtype=np.float64)\n",
+        "    Q_track = np.zeros((n_episodes, nS, nA), dtype=np.float64)\n",
+        "\n",
+        "    def select_action(state, Q, epsilon):\n",
+        "        return np.argmax(Q[state]) if np.random.random()>epsilon else np.random.randint(nA)\n",
+        "\n",
+        "    for e in tqdm(range(n_episodes), leave=False):\n",
+        "        # Generate a trajectory\n",
+        "        traj = gen_traj(select_action, Q, epsilons[e], env, max_steps)\n",
+        "        visited = np.zeros((nS, nA), dtype=np.bool)\n",
+        "\n",
+        "        for t, (state, action, reward, _, _) in enumerate(traj):\n",
+        "            if visited[state][action] and first_visit:\n",
+        "                continue\n",
+        "            visited[state][action] = True\n",
+        "\n",
+        "            n_steps = len(traj[t:])\n",
+        "            G = np.sum(disc[:n_steps] * traj[t:, 2])\n",
+        "            Q[state][action] = Q[state][action] + alphas[e] * (G - Q[state][action])\n",
+        "\n",
+        "        Q_track[e] = Q\n",
+        "\n",
+        "    # Calculate the value function and policy\n",
+        "    V = np.max(Q, axis=1)\n",
+        "    pi = {s: np.argmax(Q[s]) for s in range(nS)}\n",
+        "\n",
+        "    return Q, V, pi"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "eFPSooQdOuir"
+      },
+      "outputs": [],
       "source": [
         "optimal_Q, optimal_V, optimal_pi = mc_control (env)\n",
         "print_state_value_function(optimal_Q, P, n_cols=4, prec=2, title='Action-value function:')\n",
         "print_state_value_function(optimal_V, P, n_cols=4, prec=2, title='State-value function:')\n",
         "print_policy(optimal_pi, P)"
-      ],
-      "metadata": {
-        "id": "eFPSooQdOuir"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "OQJk95wwPDUT"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "I0vngtp1W02z"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "_nEmA77RuTIB"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "AspIJFojN6dj"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
